examples/test/testpolicy8730.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8730
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key46: value6
      key14: value13
      key18: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value8
          key43: value19
          key8: value30
      podSelector:
        matchLabels:
          key37: value46
